# Android_Demo

Webrtc_Android/: build.gradle  local.properties
Webrtc_Android/app/: build.gradle
mytest/: settings.gradle
mytest/app/: build.gradle  zte_android.keystore
mytest/nativelib/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
mytest/nativelib/src/main/jni/SDL2/: Android.mk  Makefile  Makefile.rules  config.status  libtool  simplest_showbmp.c
mytest/nativelib/src/main/jni/SDL2/include/: SDL_audio.h
mytest/nativelib/src/main/jni/SDL2/src/core/android/: SDL_android.c
mytest/nativelib/src/main/jni/SDL2/src/hidapi/android/: hid.cpp
mytest/nativelib/src/main/jni/ijkj4a/: Android.mk
mytest/nativelib/src/main/jni/src/: AndroidJni.cpp  AndroidJni.h  AudioPlayer.cpp  AudioPlayer.h  Decoder.cpp  Decoder.h  FirstTest.cpp  FirstTest.h  MyNativeWindow.cpp  MyNativeWindow.h  NativelibMain.cpp  Player.cpp  Player.h  PlayerEx.cpp  PlayerEx.h  Translate.cpp  Translate.h  VideoScale.cpp  VideoScale.h
mytest/nativelib/src/main/jni/src/example/: decoding_encoding.c  decoding_encoding.h  demuxing_decoding.c  demuxing_decoding.h  examplemain.cpp  examplemain.h  extract_mvs.c  extract_mvs.h  filter_audio.c  filter_audio.h  filtering_audio.c  filtering_audio.h  filtering_video.c  filtering_video.h  http_multiclient.c  http_multiclient.h  metadata.c  metadata.h  muxing.c  muxing.h  qsvdec.c  qsvdec.h  remuxing.c  remuxing.h  resampling_audio.c  resampling_audio.h  scaling_video.c  scaling_video.h  transcode_aac.c  transcode_aac.h  transcoding.c  transcoding.h
mytest/nativelib/src/main/jni/src/usermain/: Player.cpp  Player.h  defaultAudio.c  sdllesson.c  userplayer.c
mytest/nativelib/src/main/jni/src/utils/: JniEnv.h  LogUtils.c  LogUtils.cpp  LogUtils.h  audiochunk.c  audiochunk.h  packet_queue.c  packet_queue.h
(+55 files in other folders)
